...
    <include
        android:id="@+id/customToolbar"
        layout="@layout/view_custom_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/md_theme_primary"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:text="@string/action_save"
...
                    android:layout_marginStart="@dimen/spacing_16"
                    android:text="@string/label_invoice_number_colon"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editInvoiceNumber"
                    app:layout_constraintStart_toEndOf="@id/iconNumberContainer"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editInvoiceNumber"
                    android:layout_width="wrap_content"
...
                    android:layout_marginStart="@dimen/spacing_16"
                    android:text="@string/label_date_colon"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editInvoiceDate"
                    app:layout_constraintStart_toEndOf="@id/iconDateContainer"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/editInvoiceDate"
                    android:layout_width="wrap_content"
...
                    android:layout_marginStart="@dimen/spacing_16"
                    android:text="@string/label_po_number_colon"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editInvoicePoNumber"
                    app:layout_constraintStart_toEndOf="@id/iconPoContainer"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editInvoicePoNumber"
                    android:layout_width="wrap_content"
...
